--- a/style.css
+++ b/style.css
@@ -47,7 +47,7 @@ p {
   top: 50%;
   height: 20px;
   margin-top: -30px;
-  opacity: 0.0;
+  opacity: 0;
 }
 #i #i0, #i #i1, #i #i6 {
   top: 45%;
@@ -69,9 +69,58 @@ p {
   color: #888;
   font-size: 11px;
   top: 95%;
-  opacity: 1.0;
+  opacity: 1;
 }
 #m #m1 {
   bottom: 10px;
-  opacity: 0.0;
+  opacity: 0;
+}
+#e #e0, #e #e1 {
+  top: 45%;
+  font-size: 20px;
+  opacity: 0;
+}
+
+#e #e2 {
+  top: 37%;
+  font-size: 80px;
+  opacity: 0;
+}
+#c {
+  position: absolute;
+  top: 0;
+  visibility: 'hidden';
+}
+
+#c p {
+  width: 640px;
+  position: relative;
+}
+
+#c #c0 {
+  margin-top: 40px;
+  font-size: 32px;
+}
+
+#c #c1 {
+  color: #bbb;
+  font-size: 12px;
+  margin-bottom: 25px;
+}
+
+#c #c11 {
+  line-height: 60px;
+  font-size: 25px;
+}
+
+#c #c3, #c #c5, #c #c7 {
+  margin-bottom: 15px;
+}
+#c #c9 {
+  margin-bottom: 45px;
+}
+#ci {
+  color: #888;
+  font-size: 11px;
+  opacity: 0;
 }
