--- a/style.css
+++ b/style.css
@@ -56,7 +56,7 @@ p {
 #g0 {
   top: 35%;
 }
-#i .ii, .ii, #ci {
+#ii, #gi, #si, #ei, #ci {
   color: #888;
   font-size: 11px;
   top: 95%;
@@ -74,6 +74,6 @@ p {
   top: 37%;
   font-size: 80px;
 }
-#ci, #i p, #m #m1 {
+#ei, #i p, #m #m1, #ci {
   opacity: 0;
 }
